minor corrections and readability improvements

--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -11,8 +11,7 @@ header {
   width: 50%;
   max-width: 300px;
   min-width: 150px;
-  margin: 0.8rem 0;
-  min-height: 40px;
+  margin: 1rem 0 0.8rem;
 }
 .user-button {
   display: flex;
